@@ -25,6 +25,10 @@ The following options may be passed to CMake:
         Specify which type of build. Debug builds will be *much* larger, as
         they will contain extra debugging information.
 
+    -ENABLE_CATEGORIZED_VIEW=ON
+        Enable categorized view. Disabled as known to crash - #1530
+        Default: OFF
+
     -DENABLE_HTTP_STREAM_PLAYBACK=ON
         Enable support for playing back MPD HTTP streams via QtMultiMedia or
         lib VLC (see below)
