@@ -208,7 +208,9 @@ private:
     QSize listGridSize;
     GroupedView *groupedView;
     TableView *tableView;
+    #ifdef ENABLE_CATEGORIZED_VIEW
     CategorizedView *categorizedView;
+    #endif
     Spinner *spinner;
     MessageOverlay *msgOverlay;
     QIcon bgndIcon;
