@@ -51,6 +51,8 @@
 38. Remove zooming from context view.
 39. When adding a stream to the play queue, encode name using #StreamName:name
     and not just #name - as MPD 0.22 uses this for #icy-metadata
+40. Categorized view is reported to crash (#1530), so disable by default. Pass
+    -DENABLE_CATEGORIZED_VIEW=ON to cmake to re-enable.
 
 2.3.3
 -----
